# CameraApp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  discover_cameras.py  pyproject.toml  scan_cameras.py
.github/workflows/: ci.yml  release.yml
.old/v0.2.1(manter_original)/: requirements.txt  utils.py
.old/v0.2.2/: camera.py
Conversor_Arquivo/: converter_formato.md
Versao_Linux/v0.2(manter_original)/: app.py  utils.py
Versao_Linux/v0.2.1(manter_original)/: app.py  backup linhas.txt
Versao_Linux/v0.2.1(testes)/: main.py
Versao_Linux/v0.2.3/: app.py  camera.py  config.py  main.py  requirements.txt  utils.py
Versao_Windows/v0.2.1(testes) copy/: app.py.old  camera.py
Versao_Windows/v0.2.2/: camera.py
python/: camera-app.py
src/cameraapp/: __init__.py  __main__.py  app.py  camera.py  config.py  main.py  scanner.py  security.py  utils.py
tests/: __init__.py  conftest.py  test_camera.py  test_config.py  test_security.py  test_utils.py
v0.1/: app_v0-1.py
v0.2/: app.py  camera.py  config.py  main.py  requirements.txt  utils.py
v0.2-copy/: app.py  main.py  utils.py  wsdl_utils.py
v0.2.1/: camera.py
v0.2.1(testes)/: camera.py
v0.2.1.old/: camera.py  main.py  utils.py
v0.2.2/: config.py  discover_test.py  main.py  utils.py
v0.2.teste/: app.py  config.py  main.py  utils.py
v0.2/wsdl/: .devicemgmt.wsdl.swp
