[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cameraapp"
version = "1.0.0"
description = "Professional IP Camera Management System with ONVIF and RTSP support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Caio Vinicius", email = "contact@cfatech.com" },
]
keywords = [
    "camera",
    "ip-camera",
    "onvif",
    "rtsp",
    "video",
    "surveillance",
    "monitoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
onvif = [
    "onvif-zeep>=0.2.12",
    "WSDiscovery>=2.0.0",
]
security = [
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
all = [
    "cameraapp[onvif,security,dev]",
]

[project.urls]
Homepage = "https://github.com/mrcavisg/CameraApp"
Repository = "https://github.com/mrcavisg/CameraApp.git"
Issues = "https://github.com/mrcavisg/CameraApp/issues"
Documentation = "https://github.com/mrcavisg/CameraApp#readme"

[project.scripts]
cameraapp = "cameraapp.main:main"

[project.gui-scripts]
cameraapp-gui = "cameraapp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cameraapp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | Versao_Linux
    | Versao_Windows
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".git", ".venv", "Versao_Linux", "Versao_Windows"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/cameraapp"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 70

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "PIL.*",
    "onvif.*",
    "wsdiscovery.*",
    "keyring.*",
    "appdirs.*",
]
ignore_missing_imports = true

# Ruff configuration (alternative to flake8)
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "Versao_Linux",
    "Versao_Windows",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
